Bug 1720539 [wpt PR 29663] - Support setting currentTime and startTime using CSSNumericValue, a=testonly
Automatic update from web-platform-tests
Support setting currentTime and startTime using CSSNumericValue

Added support for setting animation currentTime and startTime using
CSSNumericValue

Bug: 1218963
Change-Id: I8a438a03ac6939a79926d7e9a9d7078eefde5400
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3028521
Commit-Queue: Jordan Taylor <jortaylomicrosoft.com>
Reviewed-by: Kevin Ellis <keverschromium.org>
Cr-Commit-Position: refs/heads/master{#904878}

--

wpt-commits: e60d962a2c576b1fbb498b0f086eb5ac6da80737
wpt-pr: 29663

UltraBlame original commit: 708a204ce3d81bc8113bb9156b0e0ee8abad8e85

--- a/testing/web-platform/tests/scroll-animations/effect-updateTiming.html
+++ b/testing/web-platform/tests/scroll-animations/effect-updateTiming.html
@@ -558,7 +558,7 @@ delay
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 anim
 .
@@ -570,9 +570,6 @@ getComputedTiming
 .
 endTime
 0
-0
-.
-01
 '
 getComputedTiming
 (
@@ -1832,18 +1829,15 @@ play
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 anim
 .
 currentTime
 0
-0
-.
-01
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 anim
 .
@@ -1855,9 +1849,6 @@ getComputedTiming
 .
 localTime
 0
-0
-.
-01
 "
 localTime
 "
@@ -1899,18 +1890,15 @@ finish
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 anim
 .
 currentTime
 100
-0
-.
-01
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 anim
 .
@@ -1922,9 +1910,6 @@ getComputedTiming
 .
 localTime
 100
-0
-.
-01
 "
 localTime
 "
@@ -1975,18 +1960,15 @@ iterationStart
 }
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 anim
 .
 currentTime
 100
-0
-.
-01
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 anim
 .
@@ -1998,9 +1980,6 @@ getComputedTiming
 .
 localTime
 100
-0
-.
-01
 "
 localTime
 "
@@ -3741,7 +3720,7 @@ animations
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 anim
 .
@@ -3762,7 +3741,7 @@ duration
 '
 )
 ;
-assert_css_numberish_equals
+assert_percents_equal
 (
 anim
 .
@@ -3775,10 +3754,10 @@ be
 unaffected
 by
 changing
-effect
 '
 +
 '
+effect
 duration
 '
 )
