--- a/testing/web-platform/tests/scroll-animations/finish-animation.html
+++ b/testing/web-platform/tests/scroll-animations/finish-animation.html
@@ -187,67 +187,6 @@ use
 strict
 '
 ;
-/
-/
-TODO
-(
-crbug
-.
-com
-/
-1216655
-)
-:
-Remove
-time
-range
-.
-Once
-time
-range
-is
-removed
-all
-/
-/
-functions
-that
-include
-.
-.
-.
-WithTimeRange
-(
-)
-should
-be
-replaced
-with
-the
-same
-/
-/
-function
-but
-without
-that
-ending
-.
-For
-example
-:
-/
-/
-/
-/
-createScrollLinkedAnimationWithTimeRange
-(
-)
-=
->
-createScrollLinkedAnimation
-(
-)
 promise_test
 (
 async
@@ -258,7 +197,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -383,15 +322,12 @@ finish
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 animation
 .
 currentTime
 100
-0
-.
-01
 '
 After
 finishing
@@ -436,7 +372,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -473,7 +409,8 @@ play
 ;
 /
 /
-1s
+1
+%
 past
 effect
 end
@@ -481,6 +418,10 @@ animation
 .
 currentTime
 =
+CSSNumericValue
+.
+parse
+(
 animation
 .
 effect
@@ -490,8 +431,15 @@ getComputedTiming
 )
 .
 endTime
+.
+value
 +
 1
++
+"
+%
+"
+)
 ;
 animation
 .
@@ -499,12 +447,12 @@ finish
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-1000
+100
 '
 After
 finishing
@@ -561,7 +509,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -640,7 +588,7 @@ finish
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -653,10 +601,10 @@ a
 reversed
 animation
 the
-currentTime
 '
 +
 '
+currentTime
 should
 be
 set
@@ -688,7 +636,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -727,7 +675,15 @@ animation
 .
 currentTime
 =
-1000
+CSSNumericValue
+.
+parse
+(
+"
+100
+%
+"
+)
 ;
 await
 animation
@@ -745,8 +701,16 @@ animation
 .
 currentTime
 =
+CSSNumericValue
+.
+parse
+(
+"
 -
-10000
+1000
+%
+"
+)
 ;
 animation
 .
@@ -754,7 +718,7 @@ finish
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -767,10 +731,10 @@ a
 reversed
 animation
 the
-currentTime
 '
 +
 '
+currentTime
 should
 be
 set
@@ -815,7 +779,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -900,7 +864,7 @@ finished
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -910,8 +874,10 @@ animation
 timeline
 .
 currentTime
+.
+value
 -
-1000
+100
 /
 0
 .
@@ -1078,15 +1044,12 @@ finished
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 animation
 .
 currentTime
 100
-0
-.
-1
 '
 The
 current
@@ -1130,10 +1093,10 @@ play
 -
 pending
 animation
+should
 '
 +
 '
-should
 be
 be
 unresolved
@@ -1678,34 +1641,11 @@ finished
 '
 )
 ;
-/
-/
-Divide
-by
-1000
-to
-convert
-from
-milliseconds
-to
-seconds
-which
-represent
-/
-/
-percentage
-values
-until
-changed
-internally
-.
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 startTime
-/
-1000
 animation
 .
 timeline
@@ -1729,15 +1669,12 @@ set
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 animation
 .
 currentTime
 100
-0
-.
-1
 '
 Hold
 time
@@ -1749,6 +1686,9 @@ end
 boundary
 of
 the
+'
++
+'
 animation
 '
 )
@@ -1890,15 +1830,12 @@ finished
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 animation
 .
 currentTime
 100
-0
-.
-1
 '
 The
 current
@@ -1917,34 +1854,11 @@ state
 '
 )
 ;
-/
-/
-Divide
-by
-1000
-to
-convert
-from
-milliseconds
-to
-seconds
-which
-represent
-/
-/
-percentage
-values
-until
-changed
-internally
-.
-assert_equals
+assert_percents_equal
 (
 animation
 .
 startTime
-/
-1000
 -
 75
 '
@@ -1962,7 +1876,7 @@ time
 '
 )
 ;
-assert_equals
+assert_times_equal
 (
 finishEvent
 .
@@ -1983,7 +1897,7 @@ time
 '
 )
 ;
-assert_equals
+assert_times_equal
 (
 finishEvent
 .
@@ -2258,15 +2172,12 @@ finished
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 animation
 .
 currentTime
 100
-0
-.
-1
 '
 The
 current
@@ -2284,34 +2195,11 @@ state
 '
 )
 ;
-/
-/
-Divide
-by
-1000
-to
-convert
-from
-milliseconds
-to
-seconds
-which
-represent
-/
-/
-percentage
-values
-until
-changed
-internally
-.
-assert_equals
+assert_percents_equal
 (
 animation
 .
 startTime
-/
-1000
 -
 75
 '
@@ -2329,7 +2217,7 @@ time
 '
 )
 ;
-assert_equals
+assert_times_equal
 (
 finishEvent
 .
@@ -2350,7 +2238,7 @@ time
 '
 )
 ;
-assert_equals
+assert_times_equal
 (
 finishEvent
 .
@@ -2633,34 +2521,11 @@ finished
 '
 )
 ;
-/
-/
-Divide
-by
-1000
-to
-convert
-from
-milliseconds
-to
-seconds
-which
-represent
-/
-/
-percentage
-values
-until
-changed
-internally
-.
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 startTime
-/
-1000
 animation
 .
 timeline
@@ -2707,7 +2572,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -2825,7 +2690,7 @@ finished
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -2835,8 +2700,10 @@ animation
 timeline
 .
 currentTime
+.
+value
 -
-1000
+100
 /
 2
 '
@@ -2892,7 +2759,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -2982,7 +2849,7 @@ finished
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -3003,10 +2870,10 @@ pause
 pending
 animation
 should
-be
 '
 +
 '
+be
 set
 '
 )
@@ -3278,15 +3145,12 @@ playbackRate
 2
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 animation
 .
 currentTime
 100
-0
-.
-1
 )
 ;
 }
