--- a/testing/web-platform/tests/scroll-animations/scroll-animation.html
+++ b/testing/web-platform/tests/scroll-animations/scroll-animation.html
@@ -297,15 +297,12 @@ in
 Pending
 state
 .
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 animation
 .
 currentTime
 0
-0
-.
-01
 "
 The
 current
@@ -319,7 +316,7 @@ state
 "
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -355,15 +352,12 @@ in
 Playing
 state
 .
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 animation
 .
 currentTime
 0
-0
-.
-01
 "
 The
 current
@@ -377,7 +371,7 @@ state
 "
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -449,7 +443,7 @@ waitForNextFrame
 (
 )
 ;
-assert_css_numberish_equals
+assert_percents_equal
 (
 animation
 .
@@ -695,7 +689,7 @@ in
 Pending
 state
 .
-assert_css_numberish_equals
+assert_percents_equal
 (
 animation
 .
@@ -720,7 +714,7 @@ state
 "
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -756,7 +750,7 @@ in
 Playing
 state
 .
-assert_css_numberish_equals
+assert_percents_equal
 (
 animation
 .
@@ -781,7 +775,7 @@ scroller
 "
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -1031,7 +1025,7 @@ in
 Pending
 state
 .
-assert_css_numberish_equals
+assert_percents_equal
 (
 animation1
 .
@@ -1061,7 +1055,7 @@ state
 "
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation1
 .
@@ -1080,7 +1074,7 @@ state
 "
 )
 ;
-assert_css_numberish_equals
+assert_percents_equal
 (
 animation2
 .
@@ -1110,7 +1104,7 @@ state
 "
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation2
 .
@@ -1151,7 +1145,7 @@ in
 Playing
 state
 .
-assert_css_numberish_equals
+assert_percents_equal
 (
 animation1
 .
@@ -1174,7 +1168,7 @@ scroller
 "
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation1
 .
@@ -1193,7 +1187,7 @@ state
 "
 )
 ;
-assert_css_numberish_equals
+assert_percents_equal
 (
 animation2
 .
@@ -1216,7 +1210,7 @@ scroller
 "
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation2
 .
@@ -1345,15 +1339,12 @@ state
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 animation
 .
 currentTime
 100
-0
-.
-01
 '
 Animation
 current
@@ -1440,15 +1431,12 @@ scrolling
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 animation
 .
 currentTime
 20
-0
-.
-01
 '
 Animation
 current
