--- a/testing/web-platform/tests/scroll-animations/setting-current-time.html
+++ b/testing/web-platform/tests/scroll-animations/setting-current-time.html
@@ -199,67 +199,6 @@ use
 strict
 '
 ;
-/
-/
-TODO
-(
-crbug
-.
-com
-/
-1216655
-)
-:
-Remove
-time
-range
-.
-Once
-time
-range
-is
-removed
-all
-/
-/
-functions
-that
-include
-.
-.
-.
-WithTimeRange
-(
-)
-should
-be
-replaced
-with
-the
-same
-/
-/
-function
-but
-without
-that
-ending
-.
-For
-example
-:
-/
-/
-/
-/
-createScrollLinkedAnimationWithTimeRange
-(
-)
-=
->
-createScrollLinkedAnimation
-(
-)
 promise_test
 (
 async
@@ -381,7 +320,118 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
+(
+t
+)
+;
+assert_throws_dom
+(
+'
+NotSupportedError
+'
+(
+)
+=
+>
+{
+animation
+.
+currentTime
+=
+CSSNumericValue
+.
+parse
+(
+"
+300
+"
+)
+;
+}
+)
+;
+assert_throws_dom
+(
+'
+NotSupportedError
+'
+(
+)
+=
+>
+{
+animation
+.
+currentTime
+=
+CSSNumericValue
+.
+parse
+(
+"
+300ms
+"
+)
+;
+}
+)
+;
+assert_throws_dom
+(
+'
+NotSupportedError
+'
+(
+)
+=
+>
+{
+animation
+.
+currentTime
+=
+CSSNumericValue
+.
+parse
+(
+"
+0
+.
+3s
+"
+)
+;
+}
+)
+;
+}
+'
+Setting
+the
+current
+time
+to
+an
+absolute
+time
+value
+throws
+exception
+'
+)
+;
+promise_test
+(
+async
+t
+=
+>
+{
+const
+animation
+=
+createScrollLinkedAnimation
 (
 t
 )
@@ -444,14 +494,26 @@ animation
 .
 currentTime
 =
-333
+CSSNumericValue
+.
+parse
+(
+"
+33
+.
+3
+%
+"
+)
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-333
+33
+.
+3
 "
 Animation
 current
@@ -493,7 +555,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -567,14 +629,26 @@ animation
 .
 currentTime
 =
-333
+CSSNumericValue
+.
+parse
+(
+"
+33
+.
+3
+%
+"
+)
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-333
+33
+.
+3
 "
 Animation
 current
@@ -616,7 +690,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -640,15 +714,6 @@ scrollHeight
 scroller
 .
 clientHeight
-;
-const
-range
-=
-animation
-.
-timeline
-.
-timeRange
 ;
 scroller
 .
@@ -695,51 +760,17 @@ animation
 .
 ready
 ;
-const
-largerThanDuration
-=
-animation
-.
-effect
-.
-getTiming
-(
-)
-.
-duration
-*
-2
-;
 animation
 .
 currentTime
 =
-largerThanDuration
-;
-assert_greater_than_equal
+CSSNumericValue
+.
+parse
 (
-largerThanDuration
-range
 "
-Make
-sure
-that
-the
-"
-+
-"
-test
-value
-is
-after
-the
-end
-of
-the
-effect
-and
-the
-timeline
+200
+%
 "
 )
 ;
@@ -753,12 +784,12 @@ finished
 "
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-largerThanDuration
+200
 "
 Animation
 current
@@ -800,7 +831,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -824,15 +855,6 @@ scrollHeight
 scroller
 .
 clientHeight
-;
-const
-range
-=
-animation
-.
-timeline
-.
-timeRange
 ;
 scroller
 .
@@ -883,8 +905,16 @@ animation
 .
 currentTime
 =
+CSSNumericValue
+.
+parse
+(
+"
 -
-100
+10
+%
+"
+)
 ;
 assert_equals
 (
@@ -896,13 +926,13 @@ running
 "
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
 -
-100
+10
 "
 Animation
 current
@@ -942,7 +972,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1011,7 +1041,15 @@ animation
 .
 currentTime
 =
-300
+CSSNumericValue
+.
+parse
+(
+"
+30
+%
+"
+)
 ;
 assert_equals
 (
@@ -1030,12 +1068,12 @@ animation
 pending
 )
 ;
-assert_time_equals_literal
+assert_percents_equal
 (
 animation
 .
 currentTime
-300
+30
 )
 ;
 }
@@ -1063,7 +1101,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1137,14 +1175,26 @@ animation
 .
 currentTime
 =
-333
+CSSNumericValue
+.
+parse
+(
+"
+33
+.
+3
+%
+"
+)
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-333
+33
+.
+3
 "
 Animation
 current
@@ -1201,7 +1251,7 @@ animation
 .
 ready
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -1271,7 +1321,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1347,6 +1397,8 @@ originalCurrentTime
 animation
 .
 currentTime
+.
+value
 ;
 /
 /
@@ -1367,7 +1419,15 @@ animation
 .
 currentTime
 =
-500
+CSSNumericValue
+.
+parse
+(
+"
+50
+%
+"
+)
 ;
 /
 /
@@ -1446,8 +1506,10 @@ originalCurrentTime
 animation
 .
 currentTime
+.
+value
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -1515,7 +1577,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -1540,7 +1602,7 @@ position
 "
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -1550,10 +1612,14 @@ animation
 timeline
 .
 currentTime
+.
+value
 -
 animation
 .
 startTime
+.
+value
 "
 Animation
 current
@@ -1613,7 +1679,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1712,14 +1778,22 @@ animation
 .
 currentTime
 =
-300
+CSSNumericValue
+.
+parse
+(
+"
+30
+%
+"
+)
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
 currentTime
-300
+30
 '
 Animation
 current
@@ -1806,7 +1880,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1907,14 +1981,22 @@ animation
 .
 currentTime
 =
-300
+CSSNumericValue
+.
+parse
+(
+"
+30
+%
+"
+)
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
 currentTime
-300
+30
 '
 Animation
 current
@@ -1990,7 +2072,7 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -2012,12 +2094,12 @@ active
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
 currentTime
-300
+30
 '
 Animation
 current
