--- a/testing/web-platform/tests/scroll-animations/setting-start-time.html
+++ b/testing/web-platform/tests/scroll-animations/setting-start-time.html
@@ -197,67 +197,117 @@ use
 strict
 '
 ;
-/
-/
-TODO
+promise_test
 (
-crbug
-.
-com
-/
-1216655
-)
-:
-Remove
-time
-range
-.
-Once
-time
-range
-is
-removed
-all
-/
-/
-functions
-that
-include
-.
-.
-.
-WithTimeRange
-(
-)
-should
-be
-replaced
-with
-the
-same
-/
-/
-function
-but
-without
-that
-ending
-.
-For
-example
-:
-/
-/
-/
-/
-createScrollLinkedAnimationWithTimeRange
-(
-)
+async
+t
 =
 >
+{
+const
+animation
+=
 createScrollLinkedAnimation
 (
+t
 )
+;
+assert_throws_dom
+(
+'
+NotSupportedError
+'
+(
+)
+=
+>
+{
+animation
+.
+startTime
+=
+CSSNumericValue
+.
+parse
+(
+"
+300
+"
+)
+;
+}
+)
+;
+assert_throws_dom
+(
+'
+NotSupportedError
+'
+(
+)
+=
+>
+{
+animation
+.
+startTime
+=
+CSSNumericValue
+.
+parse
+(
+"
+300ms
+"
+)
+;
+}
+)
+;
+assert_throws_dom
+(
+'
+NotSupportedError
+'
+(
+)
+=
+>
+{
+animation
+.
+startTime
+=
+CSSNumericValue
+.
+parse
+(
+"
+0
+.
+3s
+"
+)
+;
+}
+)
+;
+}
+'
+Setting
+the
+start
+time
+to
+an
+absolute
+time
+value
+throws
+exception
+'
+)
+;
 promise_test
 (
 async
@@ -268,7 +318,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -375,7 +425,15 @@ animation
 .
 currentTime
 =
-300
+CSSNumericValue
+.
+parse
+(
+"
+30
+%
+"
+)
 ;
 assert_equals
 (
@@ -392,12 +450,12 @@ unresolved
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-300
+30
 '
 The
 current
@@ -431,9 +489,17 @@ animation
 .
 startTime
 =
+CSSNumericValue
+.
+parse
+(
+"
 0
+%
+"
+)
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -452,12 +518,12 @@ value
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-200
+20
 '
 The
 current
@@ -468,10 +534,10 @@ from
 the
 start
 time
-not
 '
 +
 '
+not
 the
 hold
 time
@@ -531,7 +597,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -653,7 +719,15 @@ animation
 .
 currentTime
 =
-300
+CSSNumericValue
+.
+parse
+(
+"
+30
+%
+"
+)
 ;
 assert_equals
 (
@@ -670,12 +744,12 @@ unresolved
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-300
+30
 '
 The
 current
@@ -709,9 +783,17 @@ animation
 .
 startTime
 =
+CSSNumericValue
+.
+parse
+(
+"
 0
+%
+"
+)
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -814,7 +896,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -901,7 +983,15 @@ animation
 .
 startTime
 =
-50
+CSSNumericValue
+.
+parse
+(
+"
+5
+%
+"
+)
 ;
 assert_equals
 (
@@ -913,12 +1003,12 @@ running
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 startTime
-50
+5
 '
 The
 start
@@ -932,12 +1022,12 @@ value
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-150
+15
 '
 Current
 time
@@ -980,12 +1070,12 @@ value
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-150
+15
 '
 Hold
 time
@@ -1050,7 +1140,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1152,7 +1242,15 @@ animation
 .
 startTime
 =
-50
+CSSNumericValue
+.
+parse
+(
+"
+5
+%
+"
+)
 ;
 assert_equals
 (
@@ -1164,12 +1262,12 @@ running
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 startTime
-50
+5
 '
 The
 start
@@ -1324,7 +1422,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1458,14 +1556,22 @@ animation
 .
 startTime
 =
-100
+CSSNumericValue
+.
+parse
+(
+"
+10
+%
+"
+)
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 startTime
-100
+10
 '
 The
 start
@@ -1559,7 +1665,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1738,14 +1844,22 @@ animation
 .
 startTime
 =
-100
+CSSNumericValue
+.
+parse
+(
+"
+10
+%
+"
+)
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 startTime
-100
+10
 '
 The
 start
@@ -1847,7 +1961,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1926,7 +2040,7 @@ pending
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -2018,7 +2132,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -2142,7 +2256,7 @@ pending
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -2239,7 +2353,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -2287,16 +2401,24 @@ animation
 .
 startTime
 =
+CSSNumericValue
+.
+parse
+(
+"
 -
-1100
+110
+%
+"
+)
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 startTime
 -
-1100
+110
 '
 The
 start
@@ -2358,6 +2480,8 @@ assert_greater_than
 animation
 .
 currentTime
+.
+value
 animation
 .
 effect
@@ -2367,6 +2491,8 @@ getComputedTiming
 )
 .
 endTime
+.
+value
 '
 Setting
 the
@@ -2423,7 +2549,7 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -2439,10 +2565,10 @@ after
 seeking
 past
 the
-effect
 '
 +
 '
+effect
 end
 time
 by
@@ -2476,7 +2602,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -2555,8 +2681,16 @@ animation
 .
 startTime
 =
+CSSNumericValue
+.
+parse
+(
+"
 -
-1100
+110
+%
+"
+)
 ;
 assert_equals
 (
@@ -2568,12 +2702,12 @@ finished
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-1100
+110
 )
 ;
 }
@@ -2603,7 +2737,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -2675,7 +2809,15 @@ animation
 .
 currentTime
 =
-1000
+CSSNumericValue
+.
+parse
+(
+"
+100
+%
+"
+)
 ;
 assert_equals
 (
@@ -2718,8 +2860,16 @@ animation
 .
 startTime
 =
+CSSNumericValue
+.
+parse
+(
+"
 -
-2000
+200
+%
+"
+)
 ;
 assert_equals
 (
@@ -2736,13 +2886,13 @@ finished
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
 -
-2000
+200
 )
 ;
 }
@@ -2776,7 +2926,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -2957,7 +3107,7 @@ t
 const
 anim
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -3063,15 +3213,24 @@ anim
 .
 startTime
 =
+CSSNumericValue
+.
+parse
+(
 anim
 .
 timeline
 .
 currentTime
+.
+value
 -
-25
-*
-MS_PER_SEC
+2500
++
+"
+%
+"
+)
 ;
 assert_equals
 (
@@ -3110,7 +3269,7 @@ the
 new
 playback
 rate
-assert_times_equal
+assert_percents_equal
 (
 anim
 .
@@ -3120,20 +3279,18 @@ anim
 timeline
 .
 currentTime
+.
+value
 -
-25
-*
-MS_PER_SEC
+2500
 )
 ;
-assert_time_equals_literal
+assert_percents_equal
 (
 anim
 .
 currentTime
-50
-*
-MS_PER_SEC
+5000
 )
 ;
 }
@@ -3151,6 +3308,9 @@ animation
 applies
 a
 pending
+'
++
+'
 playback
 rate
 '
@@ -3166,7 +3326,7 @@ t
 const
 anim
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -3275,13 +3435,24 @@ anim
 .
 startTime
 =
+CSSNumericValue
+.
+parse
+(
 anim
 .
 timeline
 .
 currentTime
+.
+value
 -
-250
+25
++
+"
+%
+"
+)
 ;
 assert_equals
 (
@@ -3320,7 +3491,7 @@ the
 new
 playback
 rate
-assert_times_equal
+assert_percents_equal
 (
 anim
 .
@@ -3330,25 +3501,18 @@ anim
 timeline
 .
 currentTime
+.
+value
 -
-250
+25
 )
 ;
-assert_time_equals_literal
-(
-parseInt
+assert_percents_equal
 (
 anim
 .
 currentTime
-.
-toPrecision
-(
-5
-)
-10
-)
-500
+50
 )
 ;
 }
@@ -3365,6 +3529,9 @@ applies
 a
 pending
 playback
+'
++
+'
 rate
 '
 )
