--- a/testing/web-platform/tests/selection/getRangeAt.html
+++ b/testing/web-platform/tests/selection/getRangeAt.html
@@ -14,16 +14,6 @@ method
 title
 >
 <
-div
-id
-=
-log
->
-<
-/
-div
->
-<
 script
 src
 =
@@ -54,21 +44,56 @@ js
 script
 >
 <
+link
+rel
+=
+"
+help
+"
+href
+=
+"
+https
+:
+/
+/
+w3c
+.
+github
+.
+io
+/
+selection
+-
+api
+/
+#
+dom
+-
+selection
+-
+getrangeat
+"
+>
+<
+body
+>
+<
 script
 >
-test
-(
-function
-(
-)
-{
-var
+const
 sel
 =
 getSelection
 (
 )
 ;
+test
+(
+function
+(
+)
+{
 var
 range
 =
@@ -123,6 +148,151 @@ getRangeAt
 }
 )
 }
+"
+Only
+supports
+index
+0
+"
+)
+;
+test
+(
+(
+)
+=
+>
+{
+sel
+.
+removeAllRanges
+(
+)
+;
+assert_throws_dom
+(
+"
+INDEX_SIZE_ERR
+"
+(
+)
+=
+>
+sel
+.
+getRangeAt
+(
+0
+)
+)
+}
+"
+Throws
+when
+with
+no
+range
+"
+)
+;
+test
+(
+(
+)
+=
+>
+{
+sel
+.
+addRange
+(
+document
+.
+createRange
+(
+)
+)
+;
+assert_equals
+(
+sel
+.
+getRangeAt
+(
+0
+)
+sel
+.
+getRangeAt
+(
+0
+)
+)
+;
+}
+"
+Returns
+the
+same
+range
+object
+when
+with
+no
+selection
+change
+"
+)
+;
+test
+(
+(
+)
+=
+>
+{
+const
+range
+=
+sel
+.
+getRangeAt
+(
+0
+)
+;
+sel
+.
+collapse
+(
+document
+.
+body
+)
+;
+assert_not_equals
+(
+range
+sel
+.
+getRangeAt
+(
+0
+)
+)
+;
+}
+"
+Returns
+a
+different
+range
+object
+when
+with
+selection
+change
+"
 )
 ;
 <
