--- a/testing/web-platform/tests/FileAPI/idlharness.html
+++ b/testing/web-platform/tests/FileAPI/idlharness.html
@@ -27,6 +27,10 @@ API
 automated
 IDL
 tests
+(
+requiring
+dom
+)
 <
 /
 title
@@ -246,39 +250,6 @@ idl_array
 add_objects
 (
 {
-Blob
-:
-[
-'
-new
-Blob
-(
-[
-"
-TEST
-"
-]
-)
-'
-]
-File
-:
-[
-'
-new
-File
-(
-[
-"
-myFileBits
-"
-]
-"
-myFileName
-"
-)
-'
-]
 FileList
 :
 [
@@ -294,16 +265,6 @@ fileChooser
 )
 .
 files
-'
-]
-FileReader
-:
-[
-'
-new
-FileReader
-(
-)
 '
 ]
 }
