Bug 1722321 [wpt PR 29785] - [ResourceTiming]: Update WPTs concerning opaque origins, a=testonly
Automatic update from web-platform-tests
[ResourceTiming]: Update WPTs concerning opaque origins

Both TAO-null-opaque-origin.html and
TAO-case-insensitive-null-opaque-origin.sub.html test the Resource
Timing API when resources are fetched from an opaque origin context.

This change updates those tests to conform to
wpt/resource-timing/CodingConventions.md.

Bug: 1171767
Change-Id: I3bfbaa4a714a4582a5c900aa345df118828e1e0e
GithubIssue: https://github.com/w3c/resource-timing/issues/254
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3042198
Commit-Queue: Tom McKee <tommckeechromium.org>
Reviewed-by: Yoav Weiss <yoavweisschromium.org>
Cr-Commit-Position: refs/heads/master{#905292}

--

wpt-commits: 39fb1e25c09fd193d6a5675c0ebee0d8d00feb09
wpt-pr: 29785

UltraBlame original commit: 46bd597a40975048f5f67433b12e8e2dbb529801

--- a/testing/web-platform/tests/resource-timing/opaque-origin.html
+++ b/testing/web-platform/tests/resource-timing/opaque-origin.html
@@ -192,41 +192,64 @@ allow
 check
 algorithm
 will
-succeed
-when
+correctly
+distinguish
+between
+'
+null
+'
+and
+'
+Null
+'
+values
+in
 the
-value
-of
 Timing
 -
 Allow
 -
 Origin
-is
-null
-and
-the
-origin
-is
-an
+header
+.
+An
 opaque
 origin
+'
+s
+serialization
+is
+the
+string
+"
+null
+"
+and
+the
+timing
+allow
+origin
+check
+needs
+to
+do
+a
+case
+-
+sensitive
+comparison
+to
+the
+Timing
+-
+Allow
+-
+Origin
+header
 .
 <
 /
 p
->
-<
-div
-id
-=
-"
-log
-"
->
-<
-/
-div
 >
 <
 iframe
@@ -244,16 +267,30 @@ iframe
 script
 >
 const
-origin
+{
+ORIGIN
+}
 =
 get_host_info
 (
 )
-[
-"
+;
+const
+url
+=
+{
 ORIGIN
-"
-]
+}
+/
+resource
+-
+timing
+/
+resources
+/
+TAOResponse
+.
+py
 ;
 const
 frame_content
@@ -274,7 +311,7 @@ src
 =
 "
 {
-origin
+ORIGIN
 }
 /
 resources
@@ -291,13 +328,11 @@ script
 >
 <
 script
->
-const
-url
+src
 =
 "
 {
-origin
+ORIGIN
 }
 /
 resource
@@ -306,183 +341,84 @@ timing
 /
 resources
 /
-TAOResponse
+entry
+-
+invariants
 .
-py
+js
+"
+>
+<
+/
++
+script
+>
+<
+script
+>
+attribute_test
+(
+fetch
+"
+{
+url
+}
 ?
 tao
 =
 null
 "
-;
-promise_test
-(
-(
-)
-=
->
-{
-return
-new
-Promise
-(
-(
-resolve
-reject
-)
-=
->
-{
-const
-run_test
-=
-entryList
-=
->
-{
-const
-entry
-=
-entryList
+invariants
 .
-getEntries
-(
-)
-[
-0
-]
-;
-const
-sum
-=
-entry
-.
-redirectStart
-+
-entry
-.
-redirectEnd
-+
-entry
-.
-domainLookupStart
-+
-entry
-.
-domainLookupEnd
-+
-entry
-.
-connectStart
-+
-entry
-.
-connectEnd
-+
-entry
-.
-secureConnectionStart
-+
-entry
-.
-requestStart
-+
-entry
-.
-responseStart
-+
-entry
-.
-transferSize
-+
-entry
-.
-encodedBodySize
-+
-entry
-.
-decodedBodySize
-;
-assert_not_equals
-(
-sum
-0
-"
-Timings
-must
-be
-non
--
-zero
-"
-)
-;
-}
-;
-const
-observer
-=
-new
-PerformanceObserver
-(
-list
-=
->
-{
-try
-{
-run_test
-(
-list
-)
-;
-resolve
-(
-)
-;
-}
-catch
-(
-e
-)
-{
-reject
-(
-e
-)
-;
-}
-}
-)
-;
-observer
-.
-observe
-(
-{
-entryTypes
-:
-[
-"
-resource
-"
-]
-}
-)
-;
-fetch
-(
-url
-)
-;
-}
-)
-}
+assert_tao_pass_no_redirect_http
 "
 An
 opaque
 origin
 should
+be
+authorized
+to
+see
+resource
+timings
+when
+the
+"
++
+"
+TAO
+header
+is
+the
+string
+'
+null
+'
+"
+)
+;
+attribute_test
+(
+fetch
+"
+{
+url
+}
+?
+tao
+=
+Null
+"
+invariants
+.
+assert_tao_failure_resource
+"
+An
+opaque
+origin
+must
+not
 be
 authorized
 to
@@ -500,8 +436,25 @@ is
 the
 string
 '
+Null
+'
+.
+(
+The
+check
+for
+'
 null
 '
+must
+be
+"
++
+"
+case
+-
+sensitive
+)
 "
 )
 ;
@@ -524,6 +477,7 @@ display
 :
 none
 "
+;
 frameContext
 .
 src
