Bug 1721957 [wpt PR 29758] - Remove legacy-samesite Web Platform Tests, a=testonly
Automatic update from web-platform-tests
Remove legacy-samesite Web Platform Tests

SameSite-Lax-by-default and SameSite=None-requires-Secure have been
standardized ([1], [2]) and launched in Chromium [3] as well as
Firefox [4]. The WPTs testing "legacy" behavior are no longer needed,
and they are also failing on wpt.fyi [5].

This change removes the legacy-samesite virtual test suite, as well as
the ?legacy-samesite variant of the tests in wpt/cookie/samesite/. The
test for SameSite=None-requires-Secure also loses its "tentative"
designation.

Chromium will soon no longer support the configuration used in the
virtual test suite, so there would be no way to run these tests anyway.

[1] https://github.com/httpwg/http-extensions/pull/1325
[2] https://github.com/httpwg/http-extensions/pull/1323
[3] https://crrev.com/c/2231445
[4] https://hacks.mozilla.org/2020/08/changes-to-samesite-cookie-behavior/
[5] https://wpt.fyi/results/cookies/samesite?run_id=5099687737556992&run_id=5641857632567296&run_id=5678463840157696&run_id=5638004375814144

Bug: 961439, 1211388
Change-Id: Idb3c835908bcd61dde3593b4fb4f9349e738031f
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3047679
Reviewed-by: Steven Bingler <binglerchromium.org>
Commit-Queue: Lily Chen <chlilychromium.org>
Cr-Commit-Position: refs/heads/master{#905289}

--

wpt-commits: 939731a4f020de9afac2c4bf8c4de67eb9992e68
wpt-pr: 29758

UltraBlame original commit: 7a2276342a0623828b6f40c6ce9b654f85d7a045

--- a/testing/web-platform/tests/cookies/samesite/fetch.https.html
+++ b/testing/web-platform/tests/cookies/samesite/fetch.https.html
@@ -28,34 +28,6 @@ long
 "
 >
 <
-meta
-name
-=
-"
-variant
-"
-content
-=
-"
-"
->
-<
-meta
-name
-=
-"
-variant
-"
-content
-=
-"
-?
-legacy
--
-samesite
-"
->
-<
 script
 src
 =
@@ -189,9 +161,7 @@ then
 cookies
 =
 >
-getSameSiteVerifier
-(
-)
+verifySameSiteCookieState
 (
 expectedStatus
 value
