--- a/testing/web-platform/tests/cookies/samesite/form-post-blank.https.html
+++ b/testing/web-platform/tests/cookies/samesite/form-post-blank.https.html
@@ -28,34 +28,6 @@ long
 "
 >
 <
-meta
-name
-=
-"
-variant
-"
-content
-=
-"
-"
->
-<
-meta
-name
-=
-"
-variant
-"
-content
-=
-"
-?
-legacy
--
-samesite
-"
->
-<
 script
 src
 =
@@ -238,9 +210,7 @@ close
 ;
 try
 {
-getSameSiteVerifier
-(
-)
+verifySameSiteCookieState
 (
 expectedStatus
 value
