--- a/testing/web-platform/tests/cookies/samesite/form-get-blank-reload.https.html
+++ b/testing/web-platform/tests/cookies/samesite/form-get-blank-reload.https.html
@@ -15,34 +15,6 @@ utf
 /
 >
 <
-meta
-name
-=
-"
-variant
-"
-content
-=
-"
-"
->
-<
-meta
-name
-=
-"
-variant
-"
-content
-=
-"
-?
-legacy
--
-samesite
-"
->
-<
 script
 src
 =
@@ -325,9 +297,7 @@ e
 {
 try
 {
-getSameSiteVerifier
-(
-)
+verifySameSiteCookieState
 (
 expectedStatus
 value
