--- a/testing/web-platform/tests/cookies/samesite/setcookie-lax.https.html
+++ b/testing/web-platform/tests/cookies/samesite/setcookie-lax.https.html
@@ -15,34 +15,6 @@ utf
 /
 >
 <
-meta
-name
-=
-"
-variant
-"
-content
-=
-"
-"
->
-<
-meta
-name
-=
-"
-variant
-"
-content
-=
-"
-?
-legacy
--
-samesite
-"
->
-<
 script
 src
 =
@@ -401,9 +373,7 @@ e
 data
 .
 value
-isLegacySameSite
-(
-)
+false
 )
 ;
 w
