--- a/testing/web-platform/tests/cookies/samesite/window-open-reload.https.html
+++ b/testing/web-platform/tests/cookies/samesite/window-open-reload.https.html
@@ -15,34 +15,6 @@ utf
 /
 >
 <
-meta
-name
-=
-"
-variant
-"
-content
-=
-"
-"
->
-<
-meta
-name
-=
-"
-variant
-"
-content
-=
-"
-?
-legacy
--
-samesite
-"
->
-<
 script
 src
 =
@@ -188,9 +160,7 @@ e
 {
 try
 {
-getSameSiteVerifier
-(
-)
+verifySameSiteCookieState
 (
 expectedStatus
 value
