Bug 1722381 [wpt PR 29792] - Re-enable SameSite cookie iframe WPTs, a=testonly
Automatic update from web-platform-tests
Re-enable SameSite cookie iframe WPTs

These tests were temporarily disabled due to an incompatibility between
Firefox and Chromium. Now that this has been resolved by a spec PR
(https://github.com/httpwg/http-extensions/pull/1428), the tests can be
re-enabled.

Additionally, one of the tests was adjusted to reflect the behavior for
redirects specified in
https://github.com/httpwg/http-extensions/pull/1348, which is enabled as
part of --enable-experimental-web-platform-features.

Bug: 1074441
Change-Id: I7e1deadf0c080927cc328b54d300d5d418fa5c6d
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3054294
Reviewed-by: Steven Bingler <binglerchromium.org>
Commit-Queue: Lily Chen <chlilychromium.org>
Cr-Commit-Position: refs/heads/master{#905421}

--

wpt-commits: d4deee9e5303f3c09f65bc0d40783cc18a30606e
wpt-pr: 29792

UltraBlame original commit: a090c34a83fbf95a3c3d824dd66eb5bc6ca6128d

--- a/testing/web-platform/tests/cookies/samesite/iframe.https.html
+++ b/testing/web-platform/tests/cookies/samesite/iframe.https.html
@@ -119,6 +119,66 @@ body
 <
 script
 >
+/
+/
+This
+test
+creates
+an
+iframe
+with
+postToParent
+.
+py
+on
+the
+specified
+origin
+/
+/
+which
+sends
+a
+postMessage
+event
+with
+the
+cookies
+it
+received
+back
+to
+the
+/
+/
+parent
+(
+i
+.
+e
+.
+here
+)
+.
+Upon
+receiving
+the
+message
+the
+test
+verifies
+that
+the
+/
+/
+correct
+cookies
+were
+sent
+to
+the
+iframe
+.
 function
 create_test
 (
@@ -487,7 +547,7 @@ SECURE_ORIGIN
 )
 SameSiteStatus
 .
-STRICT
+CROSS_SITE
 DomSameSiteStatus
 .
 SAME_SITE
@@ -502,8 +562,7 @@ same
 host
 fetches
 are
-strictly
-same
+cross
 -
 site
 "
@@ -593,7 +652,7 @@ SECURE_SUBDOMAIN_ORIGIN
 )
 SameSiteStatus
 .
-STRICT
+CROSS_SITE
 DomSameSiteStatus
 .
 SAME_SITE
@@ -606,8 +665,7 @@ to
 subdomain
 fetches
 are
-strictly
-same
+cross
 -
 site
 "
