--- a/testing/web-platform/tests/cookies/samesite/iframe-reload.https.html
+++ b/testing/web-platform/tests/cookies/samesite/iframe-reload.https.html
@@ -119,6 +119,107 @@ body
 <
 script
 >
+/
+/
+This
+test
+creates
+an
+iframe
+with
+postToParent
+.
+py
+on
+the
+specified
+origin
+/
+/
+which
+sends
+a
+postMessage
+event
+with
+the
+cookies
+it
+received
+back
+to
+the
+/
+/
+parent
+(
+i
+.
+e
+.
+here
+)
+.
+Upon
+receiving
+the
+message
+the
+test
+verifies
+that
+the
+/
+/
+correct
+cookies
+were
+sent
+to
+the
+iframe
+and
+posts
+a
+message
+back
+to
+the
+/
+/
+iframe
+telling
+it
+to
+reload
+itself
+.
+Upon
+reload
+the
+iframe
+sends
+a
+/
+/
+postMessage
+event
+back
+to
+the
+test
+with
+the
+cookies
+it
+received
+which
+are
+/
+/
+again
+verified
+.
 function
 create_test
 (
