--- a/testing/web-platform/tests/mathml/presentation-markup/operators/mo-minsize-maxsize-001.html
+++ b/testing/web-platform/tests/mathml/presentation-markup/operators/mo-minsize-maxsize-001.html
@@ -202,6 +202,14 @@ woff
 "
 )
 ;
+/
+*
+AxisHeight
+=
+=
+0
+*
+/
 }
 mo
 {
@@ -410,8 +418,43 @@ getBoundingClientRect
 )
 .
 height
-4
+2
 *
+emToPx
+epsilon
+)
+;
+assert_approx_equals
+(
+document
+.
+getElementById
+(
+"
+zero_target_size_with_minsize
+"
+)
+.
+getBoundingClientRect
+(
+)
+.
+bottom
+-
+document
+.
+getElementById
+(
+"
+zero_target_size_with_minsize_math_axis
+"
+)
+.
+getBoundingClientRect
+(
+)
+.
+bottom
 emToPx
 epsilon
 )
@@ -431,6 +474,207 @@ Tdescent
 minsize
 /
 2
+)
+;
+test
+(
+function
+(
+)
+{
+assert_approx_equals
+(
+document
+.
+getElementById
+(
+"
+percent_minsize
+"
+)
+.
+getBoundingClientRect
+(
+)
+.
+height
+12
+*
+emToPx
+epsilon
+"
+percent
+minsize
+"
+)
+;
+assert_approx_equals
+(
+document
+.
+getElementById
+(
+"
+percent_maxsize
+"
+)
+.
+getBoundingClientRect
+(
+)
+.
+height
+3
+*
+emToPx
+epsilon
+"
+percent
+maxsize
+"
+)
+;
+}
+minsize
+/
+maxsize
+percentages
+are
+relative
+to
+the
+target
+size
+)
+;
+test
+(
+function
+(
+)
+{
+/
+/
+These
+tests
+are
+not
+really
+strong
+:
+/
+/
+-
+The
+smallest
+glyph
+for
+this
+stretchy
+operator
+is
+a
+1em
+square
+so
+/
+/
+it
+can
+'
+t
+go
+under
+a
+minsize
+of
+1em
+anyway
+.
+/
+/
+-
+The
+maxsize
+is
+theorically
+infinite
+this
+only
+tests
+that
+a
+large
+/
+/
+value
+of
+300em
+is
+clamped
+.
+assert_approx_equals
+(
+document
+.
+getElementById
+(
+"
+default_minsize
+"
+)
+.
+getBoundingClientRect
+(
+)
+.
+height
+1
+*
+emToPx
+epsilon
+"
+default
+minsize
+is
+1em
+"
+)
+;
+assert_approx_equals
+(
+document
+.
+getElementById
+(
+"
+default_maxsize
+"
+)
+.
+getBoundingClientRect
+(
+)
+.
+height
+300
+*
+emToPx
+epsilon
+"
+default
+maxsize
+is
+infinity
+"
+)
+;
+}
+default
+minsize
+/
+maxsize
+percentages
 )
 ;
 done
@@ -743,6 +987,11 @@ mrow
 >
 <
 mspace
+id
+=
+"
+zero_target_size_with_minsize_math_axis
+"
 width
 =
 "
@@ -783,6 +1032,343 @@ symmetric
 =
 "
 true
+"
+>
+<
+/
+mo
+>
+<
+mn
+>
+<
+!
+-
+-
+not
+space
+like
+-
+-
+>
+<
+/
+mn
+>
+<
+/
+mrow
+>
+<
+/
+math
+>
+<
+/
+p
+>
+<
+p
+>
+<
+math
+>
+<
+mrow
+>
+<
+mspace
+width
+=
+"
+1em
+"
+height
+=
+"
+6em
+"
+style
+=
+"
+background
+:
+blue
+"
+/
+>
+<
+mo
+id
+=
+"
+percent_minsize
+"
+minsize
+=
+"
+200
+%
+"
+stretchy
+=
+"
+true
+"
+symmetric
+=
+"
+false
+"
+>
+<
+/
+mo
+>
+<
+mn
+>
+<
+!
+-
+-
+not
+space
+like
+-
+-
+>
+<
+/
+mn
+>
+<
+/
+mrow
+>
+<
+/
+math
+>
+<
+/
+p
+>
+<
+p
+>
+<
+math
+>
+<
+mrow
+>
+<
+mspace
+width
+=
+"
+1em
+"
+height
+=
+"
+6em
+"
+style
+=
+"
+background
+:
+blue
+"
+/
+>
+<
+mo
+id
+=
+"
+percent_maxsize
+"
+maxsize
+=
+"
+50
+%
+"
+stretchy
+=
+"
+true
+"
+symmetric
+=
+"
+false
+"
+>
+<
+/
+mo
+>
+<
+mn
+>
+<
+!
+-
+-
+not
+space
+like
+-
+-
+>
+<
+/
+mn
+>
+<
+/
+mrow
+>
+<
+/
+math
+>
+<
+/
+p
+>
+<
+p
+>
+<
+math
+>
+<
+mrow
+>
+<
+mspace
+width
+=
+"
+1em
+"
+height
+=
+"
+.
+5em
+"
+style
+=
+"
+background
+:
+blue
+"
+/
+>
+<
+mo
+id
+=
+"
+default_minsize
+"
+stretchy
+=
+"
+true
+"
+symmetric
+=
+"
+false
+"
+>
+<
+/
+mo
+>
+<
+mn
+>
+<
+!
+-
+-
+not
+space
+like
+-
+-
+>
+<
+/
+mn
+>
+<
+/
+mrow
+>
+<
+/
+math
+>
+<
+/
+p
+>
+<
+p
+>
+<
+math
+>
+<
+mrow
+>
+<
+mspace
+width
+=
+"
+1em
+"
+height
+=
+"
+300em
+"
+style
+=
+"
+background
+:
+blue
+"
+/
+>
+<
+mo
+id
+=
+"
+default_maxsize
+"
+stretchy
+=
+"
+true
+"
+symmetric
+=
+"
+false
 "
 >
 <
